--- a/html/about.html
+++ b/html/about.html
@@ -13,19 +13,21 @@
 <body class="about">
     <header>
         <div class="logo">
-            <img src="white1.png" alt="Logo" width="50">
+            <img src="../pic/white1.png" alt="Logo">
             <h1 data-en="United Nations Organisation" data-sv="Förenta Nationerna Organisation" data-ru="Организация Объединенных Наций">United Nations Organisation</h1>
         </div>
-        <nav aria-label="Huvudnavigation">
+        <nav aria-label="Main Navigation">
             <ul>
-                <li><a href="index.html" data-en="Home" data-sv="Hem" data-ru="Главная">Home</a></li>
-                <li><a href="about.html" aria-current="page" data-en="About" data-sv="Om" data-ru="О нас">About</a></li>
+                <li><a href="index.html" aria-current="page" data-en="Home" data-sv="Hem" data-ru="Главная">Home</a></li>
+                <li><a href="about.html" data-en="About" data-sv="Om" data-ru="О нас">About</a></li>
                 <li><a href="contact.html" data-en="Contact" data-sv="Kontakt" data-ru="Контакт">Contact</a></li>
             </ul>
+        </nav>
+        <div class="language-buttons">
             <button id="language-button-sv" class="language-button" aria-label="Swedish Language Option" data-en="Swedish" data-sv="Svenska" data-ru="Шведский">Svenska</button>
             <button id="language-button-en" class="language-button" aria-label="English Language Option" data-en="English" data-sv="Engelska" data-ru="Английский">English</button>
             <button id="language-button-ru" class="language-button" aria-label="Russian Language Option" data-en="Russian" data-sv="Ryska" data-ru="Русский">Русский</button>
-        </nav>
+        </div>
     </header>
    
     <main class="background-image">
@@ -82,7 +84,7 @@
     </main>
 
     <footer>
-        <p><strong>&copy; <span id="year"></span> <span data-en="My Website" data-sv="Min Webbplats" data-ru="Мой Вебсайт">Min Webbplats</span></strong></p>
+        <p data-en="© 2023 United Nations Organisation. All rights reserved." data-sv="© 2023 Förenta Nationerna Organisation. Alla rättigheter förbehållna." data-ru="© 2023 Организация Объединенных Наций. Все права защищены.">© 2023 United Nations Organisation. All rights reserved.</p>
     </footer>
   
     <script src="../js/language-switcher.js"></script>
