--- a/html/contact.html
+++ b/html/contact.html
@@ -18,16 +18,18 @@
                 United Nations Organisation
             </h1>
         </div>
-        <nav aria-label="Huvudnavigation">
+        <nav aria-label="Main Navigation">
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="contact.html" aria-current="page">Contact</a></li>
+                <li><a href="index.html" aria-current="page" data-en="Home" data-sv="Hem" data-ru="Главная">Home</a></li>
+                <li><a href="about.html" data-en="About" data-sv="Om" data-ru="О нас">About</a></li>
+                <li><a href="contact.html" data-en="Contact" data-sv="Kontakt" data-ru="Контакт">Contact</a></li>
             </ul>
+        </nav>
+        <div class="language-buttons">
             <button id="language-button-sv" class="language-button" aria-label="Swedish Language Option" data-en="Swedish" data-sv="Svenska" data-ru="Шведский">Svenska</button>
             <button id="language-button-en" class="language-button" aria-label="English Language Option" data-en="English" data-sv="Engelska" data-ru="Английский">English</button>
             <button id="language-button-ru" class="language-button" aria-label="Russian Language Option" data-en="Russian" data-sv="Ryska" data-ru="Русский">Русский</button>
-        </nav>
+        </div>
     </header>
    
     <main>
@@ -77,7 +79,7 @@
     </main>
 
     <footer>
-        <p><strong>&copy; 2025 Min Webbplats</strong></p>
+        <p data-en="© 2023 United Nations Organisation. All rights reserved." data-sv="© 2023 Förenta Nationerna Organisation. Alla rättigheter förbehållna." data-ru="© 2023 Организация Объединенных Наций. Все права защищены.">© 2023 United Nations Organisation. All rights reserved.</p>
     </footer>
 
     <script src="../js/language-switcher.js"></script>
