--- a/html/about.html
+++ b/html/about.html
@@ -13,7 +13,7 @@
 <body class="about">
     <header>
         <div class="logo">
-            <img src="../pic/white1.png" alt="Logo">
+            <img src="../pic/UN-navbar-logo.png" alt="Logo">
             <h1 data-en="United Nations Organisation" data-sv="Förenta Nationerna Organisation" data-ru="Организация Объединенных Наций">United Nations Organisation</h1>
         </div>
         <nav aria-label="Main Navigation">
@@ -34,24 +34,42 @@
         <section class="hero">
             <img src="../pic/un-logo.png" alt="Logo" width="160">
             <h2 data-en="Welcome to Our Organization" data-sv="Välkommen till Vår Organisation" data-ru="Добро пожаловать в нашу организацию">Welcome to Our Organization</h2>
-            <p data-en="Join us in fostering peace, security, and sustainable development around the world." data-sv="Gå med oss för att främja fred, säkerhet och hållbar utveckling runt om i världen." data-ru="Присоединяйтесь к нам в содействии миру, безопасности и устойчивому развитию по всему миру."><strong>Join us in fostering peace, security, and sustainable development around the world.</strong></p>
-            <p data-en="Our mission is to create a better world for future generations." data-sv="Vårt uppdrag är att skapa en bättre värld för framtida generationer." data-ru="Наша миссия - создать лучший мир для будущих поколений."><strong>Our mission is to create a better world for future generations.</strong></p>
-            <p data-en="We believe in the power of collaboration and innovation to drive positive change." data-sv="Vi tror på kraften i samarbete och innovation för att driva positiv förändring." data-ru="Мы верим в силу сотрудничества и инноваций для достижения позитивных изменений."><strong>We believe in the power of collaboration and innovation to drive positive change.</strong></p>
+            <p data-en="Join us in fostering peace, security, and sustainable development around the world." data-sv="Gå med oss för att främja fred, säkerhet och hållbar utveckling runt om i världen." data-ru="Присоединяйтесь к нам в содействии миру, безопасности и устойчивому развитию по всему миру.">
+                Join us in fostering peace, security, and sustainable development around the world.
+            </p>
+            <p data-en="Our mission is to create a better world for future generations." data-sv="Vårt uppdrag är att skapa en bättre värld för framtida generationer." data-ru="Наша миссия - создать лучший мир для будущих поколений.">
+                Our mission is to create a better world for future generations.
+            </p>
+            <p data-en="We believe in the power of collaboration and innovation to drive positive change." data-sv="Vi tror på kraften i samarbete och innovation för att driva positiv förändring." data-ru="Мы верим в силу сотрудничества и инноваций для достижения позитивных изменений.">
+                We believe in the power of collaboration and innovation to drive positive change.
+            </p>
         </section>
         <section id="organization" class="page active box-shadow">
             <h2 data-en="Our Organization" data-sv="Vår Organisation" data-ru="Наша организация">Our Organization</h2>
-            <p data-en="Our organization is committed to promoting peace, security, and sustainable development worldwide." data-sv="Vår organisation är engagerad i att främja fred, säkerhet och hållbar utveckling över hela världen." data-ru="Наша организация стремится к продвижению мира, безопасности и устойчивого развития во всем мире."><strong>Our organization is committed to promoting peace, security, and sustainable development worldwide.</strong></p>
-            <p data-en="We work with various partners and stakeholders to achieve our goals and make a positive impact." data-sv="Vi arbetar med olika partners och intressenter för att uppnå våra mål och göra en positiv inverkan." data-ru="Мы работаем с различными партнерами и заинтересованными сторонами для достижения наших целей и оказания положительного влияния."><strong>We work with various partners and stakeholders to achieve our goals and make a positive impact.</strong></p>
-            <p data-en="Our team consists of dedicated professionals with diverse backgrounds and expertise." data-sv="Vårt team består av engagerade yrkesverksamma med olika bakgrunder och expertis." data-ru="Наша команда состоит из преданных своему делу профессионалов с разнообразным опытом и знаниями."><strong>Our team consists of dedicated professionals with diverse backgrounds and expertise.</strong></p>
+            <p data-en="Our organization is committed to promoting peace, security, and sustainable development worldwide." data-sv="Vår organisation är engagerad i att främja fred, säkerhet och hållbar utveckling över hela världen." data-ru="Наша организация стремится к продвижению мира, безопасности и устойчивого развития во всем мире.">
+                Our organization is committed to promoting peace, security, and sustainable development worldwide.
+            </p>
+            <p data-en="We work with various partners and stakeholders to achieve our goals and make a positive impact." data-sv="Vi arbetar med olika partners och intressenter för att uppnå våra mål och göra en positiv inverkan." data-ru="Мы работаем с различными партнерами и заинтересованными сторонами для достижения наших целей и оказания положительного влияния.">
+                We work with various partners and stakeholders to achieve our goals and make a positive impact.
+            </p>
+            <p data-en="Our team consists of dedicated professionals with diverse backgrounds and expertise." data-sv="Vårt team består av engagerade yrkesverksamma med olika bakgrunder och expertis." data-ru="Наша команда состоит из преданных своему делу профессионалов с разнообразным опытом и знаниями.">
+                Our team consists of dedicated professionals with diverse backgrounds and expertise.
+            </p>
         </section>
         <section id="history" class="page box-shadow">
             <h2 data-en="Our History" data-sv="Vår Historia" data-ru="Наша история">Our History</h2>
-            <p data-en="Founded in 1945, our organization has been at the forefront of global efforts to address pressing issues and challenges." data-sv="Grundad 1945 har vår organisation varit i framkant av globala ansträngningar för att ta itu med pressande frågor och utmaningar." data-ru="Основанная в 1945 году, наша организация находится в авангарде глобальных усилий по решению насущных проблем и вызовов."><strong>Founded in 1945, our organization has been at the forefront of global efforts to address pressing issues and challenges.</strong></p>
-            <p data-en="Over the years, we have expanded our reach and impact, working in various regions and sectors." data-sv="Under åren har vi utökat vår räckvidd och påverkan, arbetat i olika regioner och sektorer." data-ru="За эти годы мы расширили наше влияние, работая в различных регионах и секторах."><strong>Over the years, we have expanded our reach and impact, working in various regions and sectors.</strong></p>
+            <p data-en="Founded in 1945, our organization has been at the forefront of global efforts to address pressing issues and challenges." data-sv="Grundad 1945 har vår organisation varit i framkant av globala ansträngningar för att ta itu med pressande frågor och utmaningar." data-ru="Основанная в 1945 году, наша организация находится в авангарде глобальных усилий по решению насущных проблем и вызовов.">
+                Founded in 1945, our organization has been at the forefront of global efforts to address pressing issues and challenges.
+            </p>
+            <p data-en="Over the years, we have expanded our reach and impact, working in various regions and sectors." data-sv="Under åren har vi utökat vår räckvidd och påverkan, arbetat i olika regioner och sektorer." data-ru="За эти годы мы расширили наше влияние, работая в различных регионах и секторах.">
+                Over the years, we have expanded our reach and impact, working in various regions and sectors.
+            </p>
         </section>
         <section id="values" class="page box-shadow">
             <h2 data-en="Our Values" data-sv="Våra Värderingar" data-ru="Наши ценности">Our Values</h2>
-            <p data-en="We are guided by these values in all our actions and decisions." data-sv="Vi vägleds av dessa värderingar i alla våra handlingar och beslut." data-ru="Мы руководствуемся этими ценностями во всех наших действиях и решениях."><strong>We are guided by these values in all our actions and decisions.</strong></p>
+            <p data-en="We are guided by these values in all our actions and decisions." data-sv="Vi vägleds av dessa värderingar i alla våra handlingar och beslut." data-ru="Мы руководствуемся этими ценностями во всех наших действиях и решениях.">
+                We are guided by these values in all our actions and decisions.
+            </p>
             <ul>
                 <li data-en="Integrity" data-sv="Integritet" data-ru="Честность">
                     <h3 data-en="Integrity" data-sv="Integritet" data-ru="Честность">Integrity</h3>
@@ -73,18 +91,26 @@
         </section>
         <section id="initiatives" class="page box-shadow">
             <h2 data-en="Our Initiatives" data-sv="Våra Initiativ" data-ru="Наши инициативы">Our Initiatives</h2>
-            <p data-en="We have launched several initiatives to address global challenges such as climate change, poverty, and inequality." data-sv="Vi har lanserat flera initiativ för att ta itu med globala utmaningar som klimatförändringar, fattigdom och ojämlikhet." data-ru="Мы запустили несколько инициатив для решения глобальных проблем, таких как изменение климата, бедность и неравенство."><strong>We have launched several initiatives to address global challenges such as climate change, poverty, and inequality.</strong></p>
-            <p data-en="Our projects aim to empower communities and promote sustainable development." data-sv="Våra projekt syftar till att stärka samhällen och främja hållbar utveckling." data-ru="Наши проекты направлены на расширение возможностей сообществ и содействие устойчивому развитию."><strong>Our projects aim to empower communities and promote sustainable development.</strong></p>
+            <p data-en="We have launched several initiatives to address global challenges such as climate change, poverty, and inequality." data-sv="Vi har lanserat flera initiativ för att ta itu med globala utmaningar som klimatförändringar, fattigdom och ojämlikhet." data-ru="Мы запустили несколько инициатив для решения глобальных проблем, таких как изменение климата, бедность и неравенство.">
+                We have launched several initiatives to address global challenges such as climate change, poverty, and inequality.
+            </p>
+            <p data-en="Our projects aim to empower communities and promote sustainable development." data-sv="Våra projekt syftar till att stärka samhällen och främja hållbar utveckling." data-ru="Наши проекты направлены на расширение возможностей сообществ и содействие устойчивому развитию.">
+                Our projects aim to empower communities and promote sustainable development.
+            </p>
         </section>
         <section id="partners" class="page box-shadow">
             <h2 data-en="Our Partners" data-sv="Våra Partners" data-ru="Наши партнеры">Our Partners</h2>
-            <p data-en="We collaborate with a wide range of partners, including governments, NGOs, and private sector organizations." data-sv="Vi samarbetar med ett brett spektrum av partners, inklusive regeringar, icke-statliga organisationer och privata sektorns organisationer." data-ru="Мы сотрудничаем с широким кругом партнеров, включая правительства, НПО и организации частного сектора."><strong>We collaborate with a wide range of partners, including governments, NGOs, and private sector organizations.</strong></p>
-            <p data-en="Together, we work towards common goals and strive to make a positive impact." data-sv="Tillsammans arbetar vi mot gemensamma mål och strävar efter att göra en positiv inverkan." data-ru="Вместе мы работаем над достижением общих целей и стремимся оказать положительное влияние."><strong>Together, we work towards common goals and strive to make a positive impact.</strong></p>
+            <p data-en="We collaborate with a wide range of partners, including governments, NGOs, and private sector organizations." data-sv="Vi samarbetar med ett brett spektrum av partners, inklusive regeringar, icke-statliga organisationer och privata sektorns organisationer." data-ru="Мы сотрудничаем с широким кругом партнеров, включая правительства, НПО и организации частного сектора.">
+                We collaborate with a wide range of partners, including governments, NGOs, and private sector organizations.
+            </p>
+            <p data-en="Together, we work towards common goals and strive to make a positive impact." data-sv="Tillsammans arbetar vi mot gemensamma mål och strävar efter att göra en positiv inverkan." data-ru="Вместе мы работаем над достижением общих целей и стремимся оказать положительное влияние.">
+                Together, we work towards common goals and strive to make a positive impact.
+            </p>
         </section>
     </main>
 
     <footer>
-        <p data-en="© 2023 United Nations Organisation. All rights reserved." data-sv="© 2023 Förenta Nationerna Organisation. Alla rättigheter förbehållna." data-ru="© 2023 Организация Объединенных Наций. Все права защищены.">© 2023 United Nations Organisation. All rights reserved.</p>
+        <p data-en="© 2025 United Nations Organisation. All rights reserved." data-sv="© 2023 Förenta Nationerna Organisation. Alla rättigheter förbehållna." data-ru="© 2023 Организация Объединенных Наций. Все права защищены.">© 2023 United Nations Organisation. All rights reserved.</p>
     </footer>
   
     <script src="../js/language-switcher.js"></script>
