--- a/html/contact.html
+++ b/html/contact.html
@@ -13,7 +13,7 @@
     
     <header>
         <div class="logo">
-            <img src="../pic/white1.png" alt="Logo" width="50">
+            <img src="../pic/UN-navbar-logo.png" alt="Logo" width="50">
             <h1 data-en="United Nations Organisation" data-sv="Förenta Nationerna Organisation" data-ru="Организация Объединенных Наций">
                 United Nations Organisation
             </h1>
@@ -58,7 +58,7 @@
                         <strong>Email:</strong> info@minwebbplats.com
                     </li>
                     <li data-en="Phone: +46 123 456 789" data-sv="Telefon: +46 123 456 789" data-ru="Телефон: +46 123 456 789">
-                        <strong>Phone:</strong> +46 123 456 789
+                        <strong> Phone:</strong> +46 123 456 789
                     </li>
                     <li data-en="Address: 123 Main Street, Stockholm, Sweden" data-sv="Adress: 123 Main Street, Stockholm, Sverige" data-ru="Адрес: 123 Main Street, Стокгольм, Швеция">
                         <strong>Address:</strong> 123 Main Street, Stockholm, Sweden
@@ -71,7 +71,7 @@
                     <li><a href="https://www.facebook.com/unitednations" data-en="Facebook" data-sv="Facebook" data-ru="Facebook">Facebook</a></li>
                     <li><a href="https://twitter.com/UN" data-en="Twitter" data-sv="Twitter" data-ru="Twitter">Twitter</a></li>
                     <li><a href="https://www.instagram.com/unitednations" data-en="Instagram" data-sv="Instagram" data-ru="Instagram">Instagram</a></li>
-                    <li><a href="https://www.linkedin.com/company/united-nations" data-en="LinkedIn" data-sv="LinkedIn" data-ru="LinkedIn">LinkedIn</a></li>
+                    <li><a href="https://www.tiktok.com/@unitednations" data-en="TikTok" data-sv="TikTok" data-ru="TikTok">TikTok</a></li>
                     <li><a href="https://www.youtube.com/user/unitednations" data-en="YouTube" data-sv="YouTube" data-ru="YouTube">YouTube</a></li>
                 </ul>
             </div>
@@ -79,7 +79,7 @@
     </main>
 
     <footer>
-        <p data-en="© 2023 United Nations Organisation. All rights reserved." data-sv="© 2023 Förenta Nationerna Organisation. Alla rättigheter förbehållna." data-ru="© 2023 Организация Объединенных Наций. Все права защищены.">© 2023 United Nations Organisation. All rights reserved.</p>
+        <p data-en="© 2025 United Nations Organisation. All rights reserved." data-sv="© 2023 Förenta Nationerna Organisation. Alla rättigheter förbehållna." data-ru="© 2023 Организация Объединенных Наций. Все права защищены.">© 2023 United Nations Organisation. All rights reserved.</p>
     </footer>
 
     <script src="../js/language-switcher.js"></script>
