--- a/html/about.html
+++ b/html/about.html
@@ -13,7 +13,7 @@
 <body class="about">
     <header>
         <div class="logo">
-            <img src="../pic/UN-navbar-logo.png" alt="Logo">
+            <img src="../pic/un-navbar-logo.png" alt="Logo">
             <h1 data-en="United Nations Organisation" data-sv="Förenta Nationerna Organisation" data-ru="Организация Объединенных Наций">United Nations Organisation</h1>
         </div>
         <nav aria-label="Main Navigation">
