--- a/html/contact.html
+++ b/html/contact.html
@@ -13,7 +13,7 @@
     
     <header>
         <div class="logo">
-            <img src="../pic/UN-navbar-logo.png" alt="Logo" width="50">
+            <img src="../pic/un-navbar-logo.png" alt="Logo" width="50">
             <h1 data-en="United Nations Organisation" data-sv="Förenta Nationerna Organisation" data-ru="Организация Объединенных Наций">
                 United Nations Organisation
             </h1>
