--- a/about.html
+++ b/about.html
@@ -7,13 +7,13 @@
     <title data-en="About Us" data-sv="Om Oss" data-ru="О нас">About Us</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="style.css">
     <meta name="description" content="Discover our mission, history, and values dedicated to global peace, security, and development.">
 </head>
 <body class="about">
     <header>
         <div class="logo">
-            <img src="../pic/un-navbar-logo.png" alt="Logo">
+            <img src="un-navbar-logo.png" alt="Logo">
             <h1 data-en="United Nations Organisation" data-sv="Förenta Nationerna Organisation" data-ru="Организация Объединенных Наций">United Nations Organisation</h1>
         </div>
         <nav aria-label="Main Navigation">
@@ -32,7 +32,7 @@
    
     <main class="background-image">
         <section class="hero">
-            <img src="../pic/un-logo.png" alt="Logo" width="160">
+            <img src="un-logo.png" alt="Logo" width="160">
             <h2 data-en="Welcome to Our Organization" data-sv="Välkommen till Vår Organisation" data-ru="Добро пожаловать в нашу организацию">Welcome to Our Organization</h2>
             <p data-en="Join us in fostering peace, security, and sustainable development around the world." data-sv="Gå med oss för att främja fred, säkerhet och hållbar utveckling runt om i världen." data-ru="Присоединяйтесь к нам в содействии миру, безопасности и устойчивому развитию по всему миру.">
                 Join us in fostering peace, security, and sustainable development around the world.
@@ -113,6 +113,6 @@
         <p data-en="© 2025 United Nations Organisation. All rights reserved." data-sv="© 2023 Förenta Nationerna Organisation. Alla rättigheter förbehållna." data-ru="© 2023 Организация Объединенных Наций. Все права защищены.">© 2023 United Nations Organisation. All rights reserved.</p>
     </footer>
   
-    <script src="../js/language-switcher.js"></script>
+    <script src="language-switcher.js"></script>
 </body>
 </html>
