--- a/contact.html
+++ b/contact.html
@@ -7,13 +7,13 @@
     <title>Contact Us</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body class="contact">
     
     <header>
         <div class="logo">
-            <img src="../pic/un-navbar-logo.png" alt="Logo" width="50">
+            <img src="un-navbar-logo.png" alt="Logo" width="50">
             <h1 data-en="United Nations Organisation" data-sv="Förenta Nationerna Organisation" data-ru="Организация Объединенных Наций">
                 United Nations Organisation
             </h1>
@@ -35,7 +35,7 @@
     <main>
         <section id="contact" class="page active">
             <h2 data-en="Contact Us" data-sv="Kontakta Oss" data-ru="Свяжитесь с нами">
-                <img src="../pic/un-logo.png" alt="UN Logo" width="50" style="vertical-align: middle; margin-right: 10px;">
+                <img src="un-logo.png" alt="UN Logo" width="50" style="vertical-align: middle; margin-right: 10px;">
                 Contact Us
             </h2>
             <p data-en="If you have any questions or would like to get in touch, please use the contact form below." data-sv="Om du har några frågor eller vill komma i kontakt, vänligen använd kontaktformuläret nedan." data-ru="Если у вас есть вопросы или вы хотите связаться с нами, пожалуйста, используйте контактную форму ниже.">If you have any questions or would like to get in touch, please use the contact form below.</p>
@@ -82,6 +82,6 @@
         <p data-en="© 2025 United Nations Organisation. All rights reserved." data-sv="© 2023 Förenta Nationerna Organisation. Alla rättigheter förbehållna." data-ru="© 2023 Организация Объединенных Наций. Все права защищены.">© 2023 United Nations Organisation. All rights reserved.</p>
     </footer>
 
-    <script src="../js/language-switcher.js"></script>
+    <script src="language-switcher.js"></script>
 </body>
 </html>
