--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <title data-en="My Website" data-sv="Min Webbplats" data-ru="Мой Вебсайт">Min Webbplats</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body class="home">
 
     <header>
         <div class="logo">
-            <img src="../pic/un-navbar-logo.png" alt="Logo" width="50">
+            <img src="un-navbar-logo.png" alt="Logo" width="50">
             <h1 data-en="United Nations Organisation" data-sv="Förenta Nationerna Organisation" data-ru="Организация Объединенных Наций">United Nations Organisation</h1>
         </div>
         <nav aria-label="Main Navigation">
@@ -33,7 +33,7 @@
     <main>
         <section id="This-is-start-Page" class="page card">
             <div class="logo-image">
-                <img src="../pic/un-logo.png" alt="Logo" width="160">
+                <img src="un-logo.png" alt="Logo" width="160">
             </div>
             <h2 data-en="This is the start page." data-sv="Detta är startsidan." data-ru="Это стартовая страница.">This is the start page.</h2>
             <p data-en="Welcome to our website. Here you will find information about our mission and activities." data-sv="Välkommen till vår webbplats. Här hittar du information om vårt uppdrag och våra aktiviteter." data-ru="Добро пожаловать на наш сайт. Здесь вы найдете информацию о нашей миссии и деятельности.">Welcome to our website. Here you will find information about our mission and activities.</p>    
@@ -118,7 +118,7 @@
         <p data-en="© 2025 United Nations Organisation. All rights reserved." data-sv="© 2023 United Nations Organisation. All rights reserved." data-ru="© 2023 United Nations Organisation. All rights reserved.">© 2023 United Nations Organisation. All rights reserved.</p>
     </footer>
   
-    <script src="../js/language-switcher.js"></script>
+    <script src="language-switcher.js"></script>
     
 </body>
 </html>
